Ajout de photos et de légendes.

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -68,7 +68,7 @@ Vous serez donc informés dans le présent document de la synthèse de nos reche
 
 \section{Les principes géomorphologiques}
 
-\section{Le relief}
+\subsection{Le relief}
 
 Ce que nous appelons « relief » correspond à l'ensemble des formes créés par des processus.
 Ces processus sont regroupés sous le nom de « Morphogenèse ».
@@ -102,11 +102,35 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
 \begin{itemize}
   \item la cryoclastie~: Lorsqu'une roche poreuse se remplit d'eau et que cette eau gèle, son volume augmente d'environ 10\%, ce qui provoque des fissures.
   Nous appelons le facteur déterminant la « Gélivité », et elle dépend de la porosité et du taux de fissure de la roche~;
+
+  \medbreak
+  \begin{center}
+    \includegraphics[width=8cm]{Images/Erosion/cryoclastie.jpg}
+  \end{center}
+  \captionof{figure}{}
+  \medbreak
+
   \item la thermoclastie~: Processus de fracturation lié aux changements importants et fréquents de variation de température~;
   \item la desquamation~: C'est un enlèvement de lames de roche en pelure d'oignon~;
+
+  \medbreak
+  \begin{center}
+    \includegraphics[width=8cm]{Images/Erosion/desquamation.jpg}
+  \end{center}
+  \captionof{figure}{}
+  \medbreak
+  
   \item l'hydroclastie~: C'est un processus de fracturation lié aux changements de la teneur en eau de la roche. L'eau provoque également un gonflement de l'argile et augmente la pression hydrostatique.
   Lorsque l'eau s'évapore, elle provoque une fracturation par dessiccation (qui correspond au phénomène de desquamation, mais avec des formes s'organisant en réseau de fentes).
   \item l'haloclastie~: Elle est due aux cristaux de sel laissés par de l'eau qui s'est évaporée. Ces cristaux de sels vont alors creuser la roche, et ainsi potentiellement la fragmenter.
+
+  \medbreak
+  \begin{center}
+    \includegraphics[width=8cm]{Images/Erosion/Haloclastie_vasque_basalte_Hawaii.jpg}
+  \end{center}
+  \captionof{figure}{}
+  \medbreak
+
 \end{itemize}
 
 \subsubsection{L'altération biologique}
@@ -114,6 +138,11 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
 L'altération biologique comprend tout les phénomènes imputables aux êtres vivants. \\
 La respiration cellulaire~: qu'elle soit complète ou incomplète, elle entraîne une production de $CO_2$ et d'eau qui influenceront le sol.
 Par exemple, la combinaison d'eau avec le $CO_2$ forme de l'eau carbonée qui va solubiliser la calcite.
+
+\begin{center}
+  \includegraphics[width=12cm]{Images/Erosion/Respiration_cellulaire.png}
+\end{center}
+\captionof{figure}{}
 
 \subsubsection{L'altération chimique}
 \begin{itemize}
@@ -144,6 +173,12 @@ Par exemple, la combinaison d'eau avec le $CO_2$ forme de l'eau carbonée qui va
 
   \item hydrolyse~: C'est un processus au cours duquel un cation (ion positif) d'un minéral va remplacer un cation $H^+$ d'une solution acide.
   Cette réaction a pour conséquence de détruire le minéral (mise en solution complète) ou de le convertir en une nouvelle espèce (que l'on appellera alors un néo-matériau) ;
+  \medbreak
+  \begin{center}
+    \includegraphics[width=8cm]{Images/Erosion/hydrolyse.jpg}
+  \end{center}
+  \captionof{figure}{}
+  \medbreak
   \item oxydation~: C'est la combinaison de métaux (comme le fer et le manganèse) avec l'eau qui provoque une modification de la structure cristalline du minéral ;
   \item dissolution~: désagrègement des molécules en anions et cations par un solvant et dispersion dans l'eau.
 \end{itemize}
@@ -160,6 +195,11 @@ Nous caractérisons le potentiel d'érosion à partir de deux critères~:
 
 Le vent est un agent efficace uniquement dans les régions arides car la présence d'une couverture végétale diminue fortement son effet.
 Il ne peut déplacer que des éléments fins (les limons sont entraînés à partir d'une vitesse de 3 m/s, les sables nécessitent, pour leur part, 10 m/s).
+
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/erosion_eolienne.JPG}
+\end{center}
+\captionof{figure}{}
 
 \subsubsection{L'érosion fluviale et le ruissellement}
 
@@ -178,6 +218,11 @@ Ils sont décomposables en 3 parties~:
   \item un cône de déjection, où s'amoncellent une partie des altérites.
 \end{itemize}
 
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/torrent2.jpg}
+\end{center}
+\captionof{figure}{}
+
 \subsubsection{L'érosion karstique}
 
 Toutes les formes d'érosions relatives à la dissolution des roches par de l'eau douce portent le nom de morphologie karstique.
@@ -193,6 +238,11 @@ Nous distinguons deux types de morphologie karstique~:
   Nous pouvons citer les dollines, de grandes dépressions qui proviennent de l'agrandissement de failles dues à l'infiltration de l'eau~; les canyons, où encore les rivières sèches (toute l'eau ayant été absorbée par le sol).
 \end{itemize}
 
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/karst_new_col.jpg}
+\end{center}
+\captionof{figure}{}
+
 \subsubsection{L'érosion glaciaire}
 
 L'érosion glaciaire dépend de la température de la base du glacier~:
@@ -202,6 +252,11 @@ A grande échelle, nous pouvons observer des vallées qui peuvent être à faibl
 Lorsque deux ou plusieurs glaciations se sont succédées, nous pouvons observer des vallées avec plusieurs auges. 
 A petite échelle, l'érosion glaciaire se manifeste par des surfaces polies et souvent striées à cause du poids conséquent du glacier (des stries glaciaires).
 Dans beaucoup de cas, ces roches présentent une pente plus faible vers l'amont (usure) que vers l'aval (arrachement de blocs), ce qui permet de reconstituer le sens d'écoulement des glaciers.
+
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/stries_glaciaires.jpg}
+\end{center}
+\captionof{figure}{}
 
 \subsubsection{L'érosion marine}
 
@@ -218,6 +273,10 @@ Les grains de sable qui subissent l'action des vagues ont un aspect émoussé-lu
 L'érosion des façades littorales par la mer se produit par sapement et éboulement (l'eau creuse le bas de la falaise, ce qui provoque l'effondrement du mur).
 Nous distinguons les falaises vives (encore érodées par les vagues) des falaises mortes (séparées par un banc de sable de la mer).
 
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/cliffs.jpg}
+\end{center}
+\captionof{figure}{}
 
 \subsection{Le transport}
 Il existe trois types de transport~:
@@ -281,7 +340,7 @@ Nous distinguons trois types de transport de sédiments, qui dépendent de la ma
 \end{itemize}
 
 \begin{center}
-  \includegraphics[width=8cm]{Images/transport_0.png}
+  \includegraphics[width=10cm]{Images/transport_0.png}
 \end{center}
 
 La charge en suspension des écoulements turbulents est beaucoup plus importante que celle des écoulements laminaires.
@@ -290,7 +349,7 @@ La charge en suspension des écoulements turbulents est beaucoup plus importante
 Ce graphe (essentiellement basé sur des expériences en laboratoire) montre la vitesse minimale d'un courant nécessaire pour mobiliser, transporter et déposer des grains de quartz de granulométrie variable.
 
 \begin{center}
-  \includegraphics[width=8cm]{Images/transport_1.png}
+  \includegraphics[width=10cm]{Images/transport_1.png}
 \end{center}
 % #inco légende ??
 
@@ -502,6 +561,11 @@ Ce code doit garder une boucle normale pour les abscisses mais doit alterner ent
 Où $d$ représente le décalage des cellules en ordonnée (cette valeur alterne entre $0$ et $\frac{1}{2}$), $y_{max}$ le nombre de cellules en ordonnée (alterne entre $y_n$ et $y_n - 1$) et où $n \pmod 2$ donne faux quand n est pair et vrai si impair. \\
 Maintenant toutes les cellules sont à $1$ de distance entre elles, c'est pour cela que nous devons espacer les abscisses de $\displaystyle{\sin \frac{\pi}{3}}$, cette valeur est tout simplement la hauteur d'un triangle équilatéral de $1$ de côté.
 
+\begin{center}
+  \includegraphics[width=6cm]{Images/hexagone.png}
+\end{center}
+\captionof{figure}{}
+
 \subsection{Interactions entre cellules}
 
 \subsubsection{Recherche des cellules adjacentes}
@@ -581,11 +645,29 @@ Dès que le front ne contient plus aucune cellules, cela signifie que nous avons
 
 Ou $n_t$ est le nombre de cellules total dans la simulation, $n_c$ le nombre de cellules en collision, $n_f$ nombre de cellules dans le front, $n_a$ nombre de cellules adjacentes à une cellule donnée, $a_C$ à vrai si la cellule a déjà fait partie du front donc à déjà propagée sa vélocité et $b_C$ à vrai si la cellule fait actuellement partie du front. \\
 
-% \subsection{Calques de vélocité}
+\begin{center}
+  \includegraphics[width=4cm]{Images/front_1.png}
+  \includegraphics[width=4cm]{Images/front_2.png}
+  \includegraphics[width=4cm]{Images/front_3.png}
+\end{center}
+\begin{center}
+  \includegraphics[width=4cm]{Images/front_4.png}
+  \includegraphics[width=4cm]{Images/front_5.png}
+  \includegraphics[width=4cm]{Images/front_6.png}
+\end{center}
+\captionof{figure}{Échantillons de six photos dans le temps montrant l'expansion du front aux cellules non calculées.
+En noir la cellule en collision, en jaune les cellules du front et en violet les autres cellules.}
+
+\subsection{Calques de vélocité}
 
 Pour éviter des interférences entre les différentes propagations de vélocité des cellules en collision, nous utilisons des calques uniques contenant une vélocité par cellules, chacun de ces calques sont liés à une cellule en collision.
 Au début de l'étape complète de simulation chaque cellule réserve dans ses variables une liste de vecteur pour chaque cellules en collision puis pour chaque propagation de vélocité des cellules en collision, les cellules affectées ne travaillent que sur le vecteur correspondant au numéro de la cellule en collision.
 Puis à la fin de l'étape complète de simulation tous les vecteurs sont ajoutés entre eux pour donner le déplacement a appliquer à la cellule. \\
+
+\begin{center}
+  \includegraphics[width=8cm]{Images/calque.png}
+\end{center}
+\captionof{figure}{Photo de la représentation graphique des calques de vélocité, les premiers calques sont en rouge et les derniers en jaune. Nous pouvons observer pour chaque cellule sa vélocité calculée pour un calque particulier.}
 
 \subsubsection{Centre instantané de rotation}
 
@@ -815,7 +897,10 @@ Nous allons voir plus bas que notre objectif initial était loin d'être réalis
 
 \subsubsection{Les limites du réalisme}
 
-Comme nous l'avons de nombreuses fois montré, notre simulation se base uniquement sur des approximations, et forme ainsi une pile d'approximation marchant un minimum bien.
+Comme nous l'avons de nombreuses fois montré, notre simulation se base uniquement sur des approximations.
+La répartition de la vélocité n'est pas exacte et nous utilisons une grande approximation pour la compression.
+L'ensemble forme ainsi une pile d'approximation marchant en cohésion.
+Tout le long de la création de la simulation nous avions remarqué de nombreuses fois des « explosion de cellules », celle ci était alors éjecté de la plaque à une très grand distance.
 
 \subsubsection{Les limites de temps de calcul}
 
@@ -835,8 +920,11 @@ Comme nous l'avons de nombreuses fois montré, notre simulation se base uniqueme
   \end{tikzpicture}
 \end{center}
 
-Comme nous pouvons le voir la complexité asymptotique (la relation entre le nombre d'opération, donc implicitement du temps, et le nombre d'éléments dans un algorithme) est linéaire $O(n)$.
-Donc pour une cellule le temps de calcul moyen est de environ $0.01629$ ms/cellule, ainsi nous pouvons estimer que nos 100 milliards de cellules prendrons $16289999999$ms, ce qui fait 4525 heures et enivrons 189 jours.
+Comme nous pouvons le voir la complexité asymptotique (la relation entre le nombre d'opération, donc implicitement du temps, et le nombre d'éléments dans un algorithme) est linéaire~: $O(n)$.
+Donc pour une cellule le temps de calcul moyen est d'environ $0.01629$ ms/cellule, ainsi nous pouvons estimer que nos 10 milliards de cellules prendrons $16289999999$ms, ce qui fait 4525 heures et environs 189 jours.
+Or nous n'avons pas qu'un cellule en collision, nous avons tout un côté de la plaque en collision soit $10000$ cellules en collision.
+Cela augmente considérablement le temps de calcule pour arriver à 1890000 jours soit 5178 ans.
+Nous pouvons en venir a la question suivante : simuler la géomorphologie numériquement ne serait elle pas aussi long que d'observer ces phénomènes géomorphologiques.
 
 \subsubsection{Les limites de mémoires}
 \subsection{Piste d'améliorations}
