Ajout de la conclusion.

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -929,4 +929,7 @@ Nous pouvons en venir a la question suivante : simuler la géomorphologie numér
 \subsubsection{Les limites de mémoires}
 \subsection{Piste d'améliorations}
 \subsection{Conclusion}
+
+Ce TPE a été pour nous une occasion de nous réunir sur un projet commun qui connecterait nos différents centres d’intérêts tout en nous apprenant de nouvelles choses. Nous avons beaucoup appris en ce qui concerne la géologie, l'histoire des roches et la terre en général. De plus, la recherche puis la création de notre simulateur fut un véritable défi technique, nous poussant à nous renseigner sur des domaines relativement pointus tant dans les mathématiques que dans la programmation informatique, pour offrir un démonstrateur certes incomplet, mais cependant fonctionnel et déjà assez intéressant. Malheureusement, et comme c'était prévisibles, nous n'avons pas pu aller jusqu'à l'aboutissement de notre projet, car pour créer un simulateur il aurait mieux valu une thèse que deux heures de TPE par semaine. Du reste nous avons énormément appris en géologie et de ce point de vue le TPE a été une réussite. Et si notre simulateur n'est pas encore capable de simuler des comportements complexes, il apparaît qu'il possède en lui les germes d'un moteur plus performant, donc l'affaire reste à suivre, d'autant plus que nous avons d'ors et déjà un moteur capable de simuler une environnement réduit en deux dimensions, intéressant pour les fluides visqueux par exemple ou le jeu vidéo. Nous somme heureux d'être arrivé à un résultat dans notre travail mutuel et remercions nos accompagnateurs pour leurs critiques constructives.
+
 \end{document}
