Ajout des légendes

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -107,7 +107,7 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
   \begin{center}
     \includegraphics[width=8cm]{Images/Erosion/cryoclastie.jpg}
   \end{center}
-  \captionof{figure}{}
+  \captionof{figure}{Rocher soumis à une altération de type cryoclastique}
   \medbreak
 
   \item la thermoclastie~: Processus de fracturation lié aux changements importants et fréquents de variation de température~;
@@ -117,18 +117,18 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
   \begin{center}
     \includegraphics[width=8cm]{Images/Erosion/desquamation.jpg}
   \end{center}
-  \captionof{figure}{}
+  \captionof{figure}{Faille en «pelure d'oignon» typique d'un enlèvement de matière en desquamation}
   \medbreak
   
   \item l'hydroclastie~: C'est un processus de fracturation lié aux changements de la teneur en eau de la roche. L'eau provoque également un gonflement de l'argile et augmente la pression hydrostatique.
-  Lorsque l'eau s'évapore, elle provoque une fracturation par dessiccation (qui correspond au phénomène de desquamation, mais avec des formes s'organisant en réseau de fentes).
+  Lorsque l'eau s'évapore, elle provoque une fracturation par dessiccation (qui correspond au phénomène de desquamation, mais avec des formes s'organisant en réseau de fentes).  
   \item l'haloclastie~: Elle est due aux cristaux de sel laissés par de l'eau qui s'est évaporée. Ces cristaux de sels vont alors creuser la roche, et ainsi potentiellement la fragmenter.
 
   \medbreak
   \begin{center}
     \includegraphics[width=8cm]{Images/Erosion/Haloclastie_vasque_basalte_Hawaii.jpg}
   \end{center}
-  \captionof{figure}{}
+  \captionof{figure}{Roche creusée par le sel}
   \medbreak
 
 \end{itemize}
@@ -142,7 +142,7 @@ Par exemple, la combinaison d'eau avec le $CO_2$ forme de l'eau carbonée qui va
 \begin{center}
   \includegraphics[width=12cm]{Images/Erosion/Respiration_cellulaire.png}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Schéma de la respiration cellulaire}
 
 \subsubsection{L'altération chimique}
 \begin{itemize}
@@ -177,7 +177,7 @@ Par exemple, la combinaison d'eau avec le $CO_2$ forme de l'eau carbonée qui va
   \begin{center}
     \includegraphics[width=8cm]{Images/Erosion/hydrolyse.jpg}
   \end{center}
-  \captionof{figure}{}
+  \captionof{figure}{Phénomène d'hydrolyse appliqué à une roche (on le voit à la couleur différente de la roche)}
   \medbreak
   \item oxydation~: C'est la combinaison de métaux (comme le fer et le manganèse) avec l'eau qui provoque une modification de la structure cristalline du minéral ;
   \item dissolution~: désagrègement des molécules en anions et cations par un solvant et dispersion dans l'eau.
@@ -199,7 +199,7 @@ Il ne peut déplacer que des éléments fins (les limons sont entraînés à par
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/erosion_eolienne.JPG}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Exemple d'érosion éolienne}
 
 \subsubsection{L'érosion fluviale et le ruissellement}
 
@@ -207,6 +207,11 @@ Il ne peut déplacer que des éléments fins (les limons sont entraînés à par
 
 Le ruissellement se déclenche si les précipitations sont supérieures à la capacité d'infiltration du sol. C'est le cas général des terrains imperméables. 
 Après une forte pluie, les eaux empruntent les fissures du sol (à la surface), les élargissent progressivement en chenaux parallèles qui, par la suite, fusionnent avec l'écoulement des arêtes.
+
+\begin{center}
+  \includegraphics[width=8cm]{Images/Erosion/bad_lands.jpg}
+\end{center}
+\captionof{figure}{Les « Bad Lands » : exemple d'érosion due au ruissellement}
 
 \paragraph{Torrents}
 
@@ -221,7 +226,7 @@ Ils sont décomposables en 3 parties~:
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/torrent2.jpg}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Schéma des 3 composantes d'un torrent}
 
 \subsubsection{L'érosion karstique}
 
@@ -241,7 +246,7 @@ Nous distinguons deux types de morphologie karstique~:
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/karst_new_col.jpg}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Schéma des différentes morphologies karstiques}
 
 \subsubsection{L'érosion glaciaire}
 
@@ -256,7 +261,7 @@ Dans beaucoup de cas, ces roches présentent une pente plus faible vers l'amont 
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/stries_glaciaires.jpg}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Photo de stries glaciaires}
 
 \subsubsection{L'érosion marine}
 
@@ -276,7 +281,7 @@ Nous distinguons les falaises vives (encore érodées par les vagues) des falais
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/cliffs.jpg}
 \end{center}
-\captionof{figure}{}
+\captionof{figure}{Photo d'une facade marine}
 
 \subsection{Le transport}
 Il existe trois types de transport~:
@@ -342,6 +347,7 @@ Nous distinguons trois types de transport de sédiments, qui dépendent de la ma
 \begin{center}
   \includegraphics[width=10cm]{Images/transport_0.png}
 \end{center}
+\captionof{figure}{Schéma du transport de sédiments}
 
 La charge en suspension des écoulements turbulents est beaucoup plus importante que celle des écoulements laminaires.
 
@@ -351,7 +357,7 @@ Ce graphe (essentiellement basé sur des expériences en laboratoire) montre la 
 \begin{center}
   \includegraphics[width=10cm]{Images/transport_1.png}
 \end{center}
-% #inco légende ??
+\captionof{figure}{Diagramme de Hjulström}
 
 \subsection{Le dépôt des sédiments}
 
