Correction de quelques fautes d'orthographe

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -50,12 +50,12 @@
 \section{Glossaire}
 
 \begin{itemize}
-  \item Géomorphologie~: Science de l'étude des cause de l'apparence des formes qu'étudie la géologie ;
+  \item Géomorphologie~: Science de l'étude des causes de l'apparence des formes qu'étudie la géologie ;
   \item Orogénèse~: Désigne tous les mécanismes relatifs à la surrection d'un massif montagneux ;
   \item Voxel~: Point dans un environnement 3D discret ;
   \item Boxel~: Matérialisation d'un voxel en tant que cube ;
   \item Viscosité~: Plus un fluide est visqueux, plus il s'écoulera lentement ;
-  \item A assez longue échéance, toute roche peut être considérée comme un fluide très visqueux ;
+  \item Toute roche peut être considérée comme un fluide très visqueux si l'on considère une grande échelle de temps ;
   \item Moho~: Limite entre la lithosphère et l'asthénosphère ;
   \item Étape complète de simulation~: Étape comprenant la résolution de toutes les collisions et cellules.
 \end{itemize}
@@ -63,8 +63,9 @@
 \section{Introduction}
 
 Cela fait à peine 50 ans que la communauté scientifique a adopté la tectonique des plaques, et malgré de nombreuses recherches, la géologie, discipline encore relativement fragmentaire, est une science assez jeune comparée à la physique et aux mathématiques et qui connaît encore de nombreux points sombres, ignorant toujours la structure profonde de notre manteau.
-Cependant, nous (Alexis Gros, Thibaut Manceau et Tristan Porteries) avons jugés qu'il serait intéressant de faire l'état de l'art en ce qui concerne la simulation d'un paysage géomorphologique.
-Vous serez donc informés dans le présent document de la synthèse de nos recherches sur ce sujet aussi vaste que passionnant, nous ayant donné l'occasion de balayer de nombreux champs de la sciences tels que la chimie moléculaire, la mécanique des fluides ou encore le magnétisme.
+Cependant, nous (Alexis Gros, Tristan Porteries et Thibaut Manceau) pensons qu'il serait intéressant de faire l'état de l'art en ce qui concerne la simulation d'un paysage géomorphologique de façon réaliste..
+En effet, cette simulation pourrait grandement aider à l'obtention de nouvelles connaissances sur la géomorphologie, sans compter tous les autres débouchés où elle pourrait remplacer des générateurs de terrains souvent trop peu réalistes.
+Vous serez ainsi informés dans le présent document de la synthèse de nos recherches sur ce sujet aussi vaste que passionnant, nous ayant donné l'occasion de balayer de nombreux champs de la sciences tels que la chimie moléculaire, la mécanique des fluides ou encore le magnétisme.
 
 \section{Les principes géomorphologiques}
 
