Modification du gitignore et replacement de "3" --> "trois"

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -231,7 +231,7 @@ Ils sont décomposables en 3 parties~:
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/torrent2.jpg}
 \end{center}
-\captionof{figure}{Schéma des 3 composantes d'un torrent}
+\captionof{figure}{Schéma des trois composantes d'un torrent}
 
 \subsubsection{L'érosion karstique}
 
