Modification de l'image des Bad Lands

--- a/Beamer/Dossier.tex
+++ b/Beamer/Dossier.tex
@@ -92,7 +92,7 @@ Quatre étapes principales composent ces processus~:
   \item l'altération ;
   \item l'érosion ;
   \item le transport ;
-  \item la sédimentation
+  \item la sédimentation.
 \end{itemize}
 Les débris de roche résultant de phénomènes exogènes sont nommés des altérites. \\
 L'altération correspond à tout ce qui modifie les propriétés des roches, ce qui conduit à une destruction partielle ou totale de celles-ci. \\
@@ -125,7 +125,7 @@ L'altération physique est l'ensemble des altérations qui agissent physiquement
   \begin{center}
     \includegraphics[width=8cm]{Images/Erosion/desquamation.jpg}
   \end{center}
-  \captionof{figure}{Faille en "pelure d'oignon" typique d'un enlèvement de matière en desquamation}
+  \captionof{figure}{Faille en « pelure d'oignon » typique d'un enlèvement de matière en desquamation}
   \medbreak
   
   \item l'hydroclastie~: C'est un processus de fracturation lié aux changements de la teneur en eau de la roche. L'eau provoque également un gonflement de l'argile et augmente la pression hydrostatique.
@@ -219,7 +219,7 @@ Après une forte pluie, les eaux empruntent les fissures du sol (à la surface),
 \begin{center}
   \includegraphics[width=8cm]{Images/Erosion/bad_lands.jpg}
 \end{center}
-\captionof{figure}{Les "Bad Lands" (ici, en PACA) : exemple d'érosion due au ruissellement}
+\captionof{figure}{Les « Bad Lands » (ici, en PACA) : exemple d'érosion due au ruissellement}
 
 \paragraph{Torrents}
 
